// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar navigation characterisation > company admin navigation is unchanged 1`] = `
{
  "links": [
    "Ask Sonae -> /app/assistant",
    "Calls -> /app/calls",
    "Dashboard -> /app/settings",
    "Information -> /app/properties/information",
    "Information -> /app/reports/information",
    "Information -> /demos/movements/information",
    "Logs -> /app/properties/logs",
    "Reception -> /app/reception",
    "Replay Alignment -> /demos/movements/replay-lab",
    "Sales Report -> /app/reports",
    "Sonae -> /",
    "Studio Library -> /demos/movements",
    "Tasks -> /app/tasks",
    "Team Members -> /app/settings/team",
    "aiRegister -> /app/governance/register",
    "auditTrail -> /app/governance/audit-trail",
    "authDiagnostics -> /app/settings/auth-diagnostics",
    "dashboard -> /app",
    "governanceOverview -> /app/governance",
    "policiesInForce -> /app/governance/policies",
    "propertiesScrapedData -> /app/properties/scraped-data",
    "propertiesSearch -> /app/properties/search",
  ],
  "sections": [
    "Organization",
    "Posture Studio",
    "Reports",
    "governance",
    "properties",
  ],
}
`;

exports[`sidebar navigation characterisation > signed-out navigation is unchanged 1`] = `
{
  "links": [
    "Ask Sonae -> /app/assistant",
    "Calls -> /app/calls",
    "Information -> /app/properties/information",
    "Information -> /app/reports/information",
    "Information -> /demos/movements/information",
    "Logs -> /app/properties/logs",
    "Reception -> /app/reception",
    "Replay Alignment -> /demos/movements/replay-lab",
    "Sales Report -> /app/reports",
    "Sonae -> /",
    "Studio Library -> /demos/movements",
    "Tasks -> /app/tasks",
    "dashboard -> /app",
    "propertiesScrapedData -> /app/properties/scraped-data",
    "propertiesSearch -> /app/properties/search",
  ],
  "sections": [
    "Posture Studio",
    "Reports",
    "properties",
  ],
}
`;

exports[`sidebar navigation characterisation > standard user navigation is unchanged 1`] = `
{
  "links": [
    "Ask Sonae -> /app/assistant",
    "Calls -> /app/calls",
    "Information -> /app/properties/information",
    "Information -> /app/reports/information",
    "Information -> /demos/movements/information",
    "Logs -> /app/properties/logs",
    "Reception -> /app/reception",
    "Replay Alignment -> /demos/movements/replay-lab",
    "Sales Report -> /app/reports",
    "Sonae -> /",
    "Studio Library -> /demos/movements",
    "Tasks -> /app/tasks",
    "dashboard -> /app",
    "propertiesScrapedData -> /app/properties/scraped-data",
    "propertiesSearch -> /app/properties/search",
  ],
  "sections": [
    "Posture Studio",
    "Reports",
    "properties",
  ],
}
`;

exports[`sidebar navigation characterisation > super admin navigation is unchanged 1`] = `
{
  "links": [
    "Plans -> /admin/settings/plans",
    "Sonae -> /",
    "aiRegister -> /admin/governance/register",
    "allUsers -> /admin/directory",
    "analytics -> /admin/settings/analytics",
    "apiKeys -> /admin/settings/api-keys",
    "auditTrail -> /admin/governance/audit-trail",
    "authDiagnostics -> /admin/auth-diagnostics",
    "connections -> /admin/connections",
    "dashboard -> /admin",
    "governanceApprovals -> /admin/governance/approvals",
    "governanceOverview -> /admin/governance",
    "health -> /admin/health",
    "invitations -> /admin/super-admins/invite",
    "manageAgents -> /admin/agents",
    "manageCompanies -> /admin/companies",
    "manageGlobalAi -> /admin/ai",
    "manageWorkflows -> /admin/workflows",
    "policiesInForce -> /admin/governance/policies",
    "schedules -> /admin/workflows/schedules",
    "scripts -> /admin/settings/scripts",
    "systemAdmins -> /admin/super-admins",
    "systemSettings -> /admin/settings",
    "tools -> /admin/ai/tools",
    "workflowRuns -> /admin/workflows/executions",
  ],
  "sections": [
    "agents",
    "ai",
    "companies",
    "governance",
    "maintenance",
    "settings",
    "userManagement",
  ],
}
`;
